--- a/Hospital-Management-Server-Side/package.json
+++ b/Hospital-Management-Server-Side/package.json
@@ -12,11 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "mongodb": "^4.8.1",
+    "mongoose": "^8.1.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22"
   }
